--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.css
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.css
@@ -29,8 +29,8 @@
 }
 .knldge{
 	cursor:pointer;
-	font-size: 14px;
-    font-weight: 600;
+	font-size: 16px;
+    font-weight: 700;
 }
 
 .skils-short:last-child {
@@ -72,9 +72,18 @@ margin-top:38px;
 .handsExps:hover{
 		overflow-x:auto !important;
 	}
-.padd-10{
-	padding: 11px 0px;
-}.padd-5{
+@media (max-width: 1024px){
+  .padd-10{
+	padding: 21px 0px;
+	   }
+}
+ @media (min-width: 1025px){
+  .padd-10{
+	padding: 14px 0px;
+	   }
+}
+
+.padd-5{
 	padding: 11px 0px;
 }.padd-55{
 	padding: 5px 0px;
