--- a/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-matches/shared-user-profile-matches.component.html
@@ -518,7 +518,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="accordion mt-3 " style="margin-top: 1.6rem !important;" *ngIf="desired">
+			<div class="accordion mt-3 " *ngIf="desired">
 			<div class="pj-titless"  [ngClass]="(isMultipleMatches === true)?'padd-5':'padd-10'" ><h6  class="mb-0"></h6></div>
 				<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 					<ul class="list-group">
