--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -365,7 +365,7 @@
 					</div>
 				</div>
 			</div> -->
-			<div *ngIf="isOtherRequired">
+			<div *ngIf="isOtherRequired && !isMultipleMatches">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -734,7 +734,7 @@
 				</div>
 			</div>
 			
-			<div *ngIf="isOtherDesired">
+			<div *ngIf="isOtherDesired && !isMultipleMatches">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -1102,7 +1102,7 @@
 			</div>
 			
 			
-			<div *ngIf="isOtherNice">
+			<div *ngIf="isOtherNice && !isMultipleMatches">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -1471,7 +1471,7 @@
 			</div>
 			
 			
-			<div *ngIf="isOtherOptional">
+			<div *ngIf="isOtherOptional && !isMultipleMatches">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
