--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -1,6 +1,6 @@
 <div class="row  info-box">
 	<div class="col-lg-12 " [ngClass]="(router?.url?.includes('/user'))?'mt-4':''">
-		<div class="accordion  " [ngClass]="isMultipleMatches ? 'mtop-2' : 'mtop-2'">
+		<div class="accordion mtop-2" >
 			<div  *ngIf="postedJobsDetails?.match_select?.experience=='0'">
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
@@ -365,7 +365,7 @@
 					</div>
 				</div>
 			</div> -->
-			<div *ngIf="isOtherRequired && !isMultipleMatches">
+			<div *ngIf="isOtherRequired ">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -374,7 +374,7 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info" >
 						<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-							<li class="otherpreff text-capitalize handsExp"  [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"  *ngIf="postedJobsDetails?.match_select[item?.id] == '0'" >
+							<li class="otherpreff text-capitalize handsExp"  *ngIf="postedJobsDetails?.match_select[item?.id] == '0'" >
 							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
@@ -734,7 +734,7 @@
 				</div>
 			</div>
 			
-			<div *ngIf="isOtherDesired && !isMultipleMatches">
+			<div *ngIf="isOtherDesired ">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -743,7 +743,7 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info" >
 						<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-							<li class="otherpreff text-capitalize handsExp"  [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"  *ngIf="postedJobsDetails?.match_select[item?.id] == '1'" >
+							<li class="otherpreff text-capitalize handsExp" *ngIf="postedJobsDetails?.match_select[item?.id] == '1'" >
 							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
@@ -1102,7 +1102,7 @@
 			</div>
 			
 			
-			<div *ngIf="isOtherNice && !isMultipleMatches">
+			<div *ngIf="isOtherNice">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -1111,7 +1111,7 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info" >
 						<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-							<li class="otherpreff text-capitalize handsExp"  [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"  *ngIf="postedJobsDetails?.match_select[item?.id] == '2'" >
+							<li class="otherpreff text-capitalize handsExp" *ngIf="postedJobsDetails?.match_select[item?.id] == '2'" >
 							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
@@ -1471,7 +1471,7 @@
 			</div>
 			
 			
-			<div *ngIf="isOtherOptional && !isMultipleMatches">
+			<div *ngIf="isOtherOptional">
 				<div class="row info-box"  >
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
 						<ul class="list-group">
@@ -1480,7 +1480,7 @@
 					</div>
 					<div class="col-lg-6 col-md-77 col-sm-8 info" >
 						<ul class="list-group" *ngFor="let item of postedJobsDetails?.others; let i=index">
-							<li class="otherpreff text-capitalize handsExp"  [ngClass]="(isMultipleMatches === true)?'min-handsExps':''"  *ngIf="postedJobsDetails?.match_select[item?.id] == ''" >
+							<li class="otherpreff text-capitalize handsExp" *ngIf="postedJobsDetails?.match_select[item?.id] == ''" >
 							  <span  >{{item?.title ? item?.title : '--'}}</span>
 							</li>
 						 </ul>
