1. To change the label for employer profile page, for new it shows - Create profile , for existing user it show - Edit profile 2. To create the delete account for user

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -223,6 +223,7 @@
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/notification']" href="javascript:;">{{"header.notification" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/calendar']" href="javascript:;">{{"common.calender" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" [routerLink]="['/user/profile-setting']" href="javascript:;">{{"header.settings" | translate}}</a></li>
+			  <li class="submenu" (click)="openpopup()"> <a class="dropdown-item" href="javascript:;">{{"header.deleteaccount" | translate}}</a></li>
               <li class="submenu"> <a class="dropdown-item" (click)="logout()" href="javascript:;">{{"header.logout" | translate}}</a></li>
             </ul>
           </li>
@@ -257,3 +258,15 @@
     </div>
   </nav>
 </header>
+<ng-template *ngIf="modelshow" #deleteAccountModal let-modal let-d="dismiss">
+		<div class="modal-content">
+			<div class="modal-body text-center">
+				<h6 class="mt-3" style="font-size: 20px;">Are You Sure You want to delete account permanently?</h6>
+			</div>
+			
+		<div class="modal-footer">
+      <button type="button" (click)="closepopup()" class="btn btn-secondary" data-dismiss="modal">{{"shared.no" | translate}} </button>
+      <button (click)="deleteaccount()" type="button" class="btn btn-danger " data-dismiss="modal">{{"shared.yes" | translate}} </button>
+      </div>
+		</div>	
+	</ng-template>
