--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -383,7 +383,10 @@
 			</div>
 		</div>
 		<div class="accordion "  [ngClass]="isMultipleMatches ? ' mt-5' : ' mt-3'" *ngIf="desired">
-			<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'" style="padding:12px 0px;" ><h6  class="mb-0"></h6></div>
+			<div  *ngIf="isMultipleMatches;else elseblock" [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'" ><h6  class="mb-0"></h6></div>
+			<ng-template #elseblock>
+				<div [ngClass]="isMultipleMatches ? 'pj-titles-0' : 'pj-titles'"  style="padding:12px 0px;"><h6  class="mb-0"></h6></div>
+			</ng-template>
 			<div style="margin-top:-12px;" *ngIf="postedJobsDetails?.match_select?.experience=='1'">
 				<div class="row">
 					<div class="col-lg-6 col-md-55 col-sm-4 caption">
