--- a/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
+++ b/frontend/src/app/shared/component/modal/resume-modal/resume-modal.component.html
@@ -14,7 +14,7 @@
     (loaded)="resumeLoaded($event,this)"
     [googleCheckInterval]="3000"
     [googleMaxChecks]="50"
-    viewer="pdf" style="width:100%;height:150vh;">
+    viewer="office" style="width:100%;height:150vh;">
 </ngx-doc-viewer>
     </div>
     <div class="modal-footer">
